重构 model.go 中的 ListResponse 和 SimpleResponse
从而可以支持输出动态的类型

--- a/src/server/filters.yml
+++ b/src/server/filters.yml
@@ -25,3 +25,13 @@
       - [From, Is, du-learning@baidu.com]
   action:
     Label: 度学堂
+
+- filter:
+  name: bdd-core
+  condition:
+    match: Any
+    rules:
+      - [Cc, Contains, bdd-core@baidu.com]
+      - [To, Contains, bdd-core@baidu.com]
+  action:
+    Label: bdd-core
