初步完成了根据 label 过滤邮件的功能
Inbox的筛选方式还未处理

--- a/src/server/filters.yml
+++ b/src/server/filters.yml
@@ -35,3 +35,12 @@
       - [To, Contains, bdd-core@baidu.com]
   action:
     Label: bdd-core
+
+- filter:
+  name: Gitlab
+  condition:
+    match: Any
+    rules:
+      - [From, Contains, gitlab.baidu.com]
+  action:
+    Label: Gitlab
