--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -1,9 +1,9 @@
 all:
-	go build frontend.go
-	go build main.go
-	go build parser.go
-	go build rebuild_index.go
-	go build sent_mail.go
-	go build sqlite3.go
-	go build yml.go
-
+	go build -o ../../bin/frontend frontend.go
+	go build -o ../../bin/main main.go
+	go build -o ../../bin/parser parser.go
+	go build -o ../../bin/rebuild rebuild.go
+	go build -o ../../bin/run_filters run_filters.go
+	go build -o ../../bin/sent_mail sent_mail.go
+	go build -o ../../bin/sqlite3 sqlite3.go
+	go build -o ../../bin/yml yml.go
