修复转发的时候没有带附件过去的BUG，后端还未实现

--- a/filters.yml
+++ b/filters.yml
@@ -14,6 +14,18 @@
     Label: Spam
 
 - filter:
+  name: HTTPs
+  stop: true
+  condition:
+    match: Any
+    rules:
+      - [From, Contains, https@baidu.com]
+      - [To, Contains, https@baidu.com]
+      - [Subject, Contains, https]
+  action:
+    Label: HTTPs
+
+- filter:
   name: 发给我的
   condition:
     match: Any
