重构frontend.go的代码，增强envelope.go的功能

--- a/filters.yml
+++ b/filters.yml
@@ -26,6 +26,15 @@
     Label: HTTPs
 
 - filter:
+  name: Calendars
+  condition:
+    match: Any
+    rules:
+      - [Body, Contains, 'BEGIN:VCALENDAR']
+  action:
+    Label: Calendars
+
+- filter:
   name: 发给我的
   condition:
     match: Any
