调整一下过滤器的内容

--- a/filters.yml
+++ b/filters.yml
@@ -27,6 +27,7 @@
     rules:
       - [From, Contains, 'galaxy-mon@baidu.com']
       - [From, Contains, 'classified.ci@baidu.com']
+      - [From, Contains, 'noah-autopost@baidu.com']
   action:
     Label: 监控邮件
 
