添加 MarkAsRead 指令，可以在过滤邮件的时候直接标记为已读

--- a/filters.yml
+++ b/filters.yml
@@ -42,6 +42,7 @@
       - [From, Contains, 'noah-autopost@baidu.com']
   action:
     Label: 监控邮件
+    MarkAsRead: true
 
 - filter:
   name: Spam Filter
