几个小的功能修复和升级
1. 日期展示的问题（处理IE下的兼容性）
2. 可以查看未过滤的邮件内容
3. 回复和转发邮件的时候，可以带上In-Reply-To和References字段

References的计算规则可能有问题，需要注意

--- a/filters.yml
+++ b/filters.yml
@@ -45,6 +45,7 @@
       - [From, Contains, 'icafeauto@baidu.com']
       - [From, Contains, 'dr-api@baidu.com']
       - [SentTo, Contains, 'jp-video-rd@baidu.com']
+      - [SentTo, Contains, 'tieba-ecom-rd@baidu.com']
   action:
     Label: 监控邮件
     MarkAsRead: true
@@ -62,6 +63,7 @@
       - [From, '!Contains', ct_rsv@ctrip.com]
   action:
     Label: Spam
+    MarkAsRead: true
 
 - filter:
   name: HTTPs
