--- a/filters.yml
+++ b/filters.yml
@@ -46,6 +46,7 @@
       - [From, Contains, 'dr-api@baidu.com']
       - [SentTo, Contains, 'jp-video-rd@baidu.com']
       - [SentTo, Contains, 'tieba-ecom-rd@baidu.com']
+      - [Subject, Contains, '一个月以上未活动版本统计']
   action:
     Label: 监控邮件
     MarkAsRead: true
