添加了搜索的功能，不过还不能自动添加和删除索引，需要开放API

--- a/filters.yml
+++ b/filters.yml
@@ -133,6 +133,7 @@
     match: Any
     rules:
       - [SentTo, Contains, liyubei@baidu.com]
+      - [Subject, Contains, 文章推荐]
   action:
     Label: SentToMe
 
