重构一下，把所有的常量都合并到一起

--- a/filters.yml
+++ b/filters.yml
@@ -47,6 +47,7 @@
       - [SentTo, Contains, 'jp-video-rd@baidu.com']
       - [SentTo, Contains, 'tieba-ecom-rd@baidu.com']
       - [Subject, Contains, '一个月以上未活动版本统计']
+      - [Subject, Contains, '[LOG.BAIDU.JP][WARN]']
   action:
     Label: 监控邮件
     MarkAsRead: true
