用{比较搓}的方式修复数组越界的一个问题

--- a/filters.yml
+++ b/filters.yml
@@ -48,6 +48,7 @@
       - [SentTo, Contains, 'tieba-ecom-rd@baidu.com']
       - [Subject, Contains, '一个月以上未活动版本统计']
       - [Subject, Contains, '[LOG.BAIDU.JP][WARN]']
+      - [Subject, Contains, '[LOG.BAIDU.COM][WARN]']
   action:
     Label: 监控邮件
     MarkAsRead: true
