修复 filter&action 以及日历类型邮件展示的问题

--- a/filters.yml
+++ b/filters.yml
@@ -51,6 +51,7 @@
       - [Subject, Contains, '一个月以上未活动版本统计']
       - [Subject, Contains, '[LOG.BAIDU.JP][WARN]']
       - [Subject, Contains, '[LOG.BAIDU.COM][WARN]']
+      - [Subject, Contains, 'THIS IS SPAM']
   action:
     Label: 监控邮件
     MarkAsRead: true
