行为符合预期，但是 thread.expandSubjectTable 第二个参数如何解释呢?

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -1,7 +1,7 @@
 all:
-	go build -o ../../bin/frontend frontend.go
-	go build -o ../../bin/main main.go
-	go build -o ../../bin/searcher searcher.go
+	go build -gcflags "-N -l" -o ../../bin/frontend frontend.go
+	go build -gcflags "-N -l" -o ../../bin/main main.go
+	go build -gcflags "-N -l" -o ../../bin/searcher searcher.go
 
 test:
 	go run tools/fix_threads2.go -case1=1 | sort > 1.txt
