采用了elasticsearch-rtf来替换默认的elasticsearch

--- a/src/server/Makefile
+++ b/src/server/Makefile
@@ -6,6 +6,10 @@ test:
 	go run tools/fix_threads2.go -case1=0 | sort > 0.txt
 	go run tools/fix_threads2.go -case1=1 | sort > 1.txt
 
+clear:
+	@curl -XDELETE 'http://localhost:9200/baidu/'
+	@curl -XPUT 'http://localhost:9200/baidu/'
+
 lint:
 	@../../../gopath/bin/golint .
 	@../../../gopath/bin/golint base
