调试完毕 /api/mail/post 的接口

--- a/src/server/v2/Makefile
+++ b/src/server/v2/Makefile
@@ -2,6 +2,7 @@ test:
 	go test -v ./config
 	go test -v ./filter
 	go test -v ./models
-	go test -v ./parser
 	go test -v ./util
+	go test -v ./util/parser
+	go test -v ./util/builder
 	go test -v ./util/storage
