所有的代码和资源都内联到一起了，最终的发布版本就一个二进制文件

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ src/server/v2/leeight@126.com.json
 src/server/v2/leeight@stu.xjtu.edu.cn.json
 src/server/v2/x.go
 src/server/v2/x.json
+bindata.go
 
 ckeditor
 
