添加-ldflags参数，方便查看最终的build版本

--- a/src/server/v2/Makefile
+++ b/src/server/v2/Makefile
@@ -15,7 +15,10 @@ debug:
 		-o bindata/bindata.go \
 		-pkg bindata \
 		static/output/...
-	go build -o email main.go
+	go build \
+		-o email \
+		-ldflags '-X main.BUILD_VERSION $(shell git log --format="%H" -n 1) -X main.BUILD_DATE "$(shell date)"' \
+		main.go
 
 release:
 	../../../../gopath/bin/go-bindata \
@@ -24,5 +27,8 @@ release:
 		-o bindata/bindata.go \
 		-pkg bindata \
 		static/output/...
-	go build -o email main.go
+	go build \
+		-o email \
+		-ldflags '-X main.BUILD_VERSION $(shell git log --format="%H" -n 1) -X main.BUILD_DATE "$(shell date)"' \
+		main.go
 	strip email
