--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ filters.yml
 /src/server/messages.json
 /src/server/orm_test.db
 /src/server/threads.txt
+/src/server/v2/static
+output
 
 foo_backup.sql
 liyubei@baidu.com.json
