解除了对 qiniu/iconv 的依赖，Windows下面终于可以正常使用了

--- a/src/server/v2/Makefile
+++ b/src/server/v2/Makefile
@@ -18,7 +18,7 @@ debug:
 		-pkg bindata \
 		static/...
 
-release:
+fe:
 	cd static && edp build -f && cd -
 	../../../../gopath/bin/go-bindata \
 		-prefix="static/output/" \
@@ -26,8 +26,19 @@ release:
 		-o bindata/bindata.go \
 		-pkg bindata \
 		static/output/...
-	go build \
-		-o email \
+
+darwin_amd64:
+	GOOS=darwin GOARCH=amd64 go build \
+		-o darwin_amd64_email \
 		-ldflags '-X main.BuildVersion $(shell git log --format="%H" -n 1) -X main.BuildDate "$(shell date)"' \
 		main.go
-	strip email
+	strip darwin_amd64_email
+
+darwin_386:
+	GOOS=darwin GOARCH=386 go build \
+		-o darwin_386_email \
+		-ldflags '-X main.BuildVersion $(shell git log --format="%H" -n 1) -X main.BuildDate "$(shell date)"' \
+		main.go
+	strip darwin_386_email
+
+release: fe darwin_amd64
